@@ -1,6 +1,7 @@
 package com.example.controller.master;
 
 import com.example.dto.request.CityRequestDTO;
+import com.example.dto.response.ApiResponse;
 import com.example.dto.response.CityResponseDTO;
 import com.example.model.Admin;
 import com.example.model.City;
@@ -11,7 +12,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/cities")
@@ -22,77 +22,146 @@ public class CityController {
 
     // ================= CREATE =================
     @PostMapping
-    public CityResponseDTO create(@Valid @RequestBody CityRequestDTO dto) {
+    public ApiResponse<CityResponseDTO> create(
+            @Valid @RequestBody CityRequestDTO dto) {
 
-        City saved = cityService.saveCity(mapToEntity(dto));
-        return mapToResponse(saved);
+        City saved = cityService.create(mapToEntity(dto));
+
+        return ApiResponse.<CityResponseDTO>builder()
+                .success(true)
+                .message("City created successfully.")
+                .data(mapToResponse(saved))
+                .build();
     }
 
     // ================= GET BY ID =================
     @GetMapping("/{id}")
-    public CityResponseDTO getById(@PathVariable Long id) {
+    public ApiResponse<CityResponseDTO> getById(
+            @PathVariable Long id) {
 
-        return cityService.getCityById(id)
-                .map(this::mapToResponse)
-                .orElseThrow(() -> new RuntimeException("City not found"));
+        City city = cityService.getById(id);
+
+        return ApiResponse.<CityResponseDTO>builder()
+                .success(true)
+                .message("City retrieved successfully.")
+                .data(mapToResponse(city))
+                .build();
     }
 
     // ================= GET ALL =================
     @GetMapping
-    public List<CityResponseDTO> getAll() {
+    public ApiResponse<List<CityResponseDTO>> getAll() {
 
-        return cityService.getAllCities()
+        List<CityResponseDTO> cities = cityService.getAll()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Cities retrieved successfully.")
+                .data(cities)
+                .build();
     }
 
     // ================= DELETE =================
+    // ================= DELETE =================
     @DeleteMapping("/{id}")
-    public String delete(@PathVariable Long id) {
-        cityService.deleteCity(id);
-        return "City deleted successfully";
+    public ApiResponse<String> delete(
+            @PathVariable Long id,
+            @RequestParam Long deletedBy) {
+
+        cityService.delete(id, deletedBy);
+
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("City deleted successfully.")
+                .build();
     }
 
     // ================= ACTIVE =================
     @GetMapping("/active")
-    public List<CityResponseDTO> getActive() {
-        return cityService.getActiveCities()
+    public ApiResponse<List<CityResponseDTO>> getActive() {
+
+        List<CityResponseDTO> activeCities = cityService.getActive()
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Active cities retrieved successfully.")
+                .data(activeCities)
+                .build();
     }
 
     // ================= BY STATE =================
     @GetMapping("/state/{stateId}")
-    public List<CityResponseDTO> getByState(@PathVariable Long stateId) {
+    public ApiResponse<List<CityResponseDTO>> getByState(
+            @PathVariable Long stateId) {
 
-        return cityService.getCitiesByState(stateId)
+        List<CityResponseDTO> cities = cityService.getByState(stateId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Cities retrieved successfully by state.")
+                .data(cities)
+                .build();
     }
 
     // ================= BY ADMIN =================
     @GetMapping("/admin/{adminId}")
-    public List<CityResponseDTO> getByAdmin(@PathVariable Long adminId) {
+    public ApiResponse<List<CityResponseDTO>> getByAdmin(
+            @PathVariable Long adminId) {
 
-        return cityService.getCitiesByAdmin(adminId)
+        List<CityResponseDTO> cities = cityService.getByAdmin(adminId)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Cities retrieved successfully by admin.")
+                .data(cities)
+                .build();
     }
 
     // ================= SEARCH =================
     @GetMapping("/search")
-    public List<CityResponseDTO> search(@RequestParam String keyword) {
+    public ApiResponse<List<CityResponseDTO>> search(
+            @RequestParam String keyword) {
 
-        return cityService.searchByName(keyword)
+        List<CityResponseDTO> cities = cityService.searchByName(keyword)
                 .stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
-    }
+                .toList();
 
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Cities searched successfully.")
+                .data(cities)
+                .build();
+    }
+    // ================= UPDATE =================
+    @PutMapping("/{id}")
+    public ApiResponse<CityResponseDTO> update(
+            @PathVariable Long id,
+            @Valid @RequestBody CityRequestDTO dto) {
+
+        City updated = cityService.update(
+                id,
+                mapToEntity(dto)
+        );
+
+        return ApiResponse.<CityResponseDTO>builder()
+                .success(true)
+                .message("City updated successfully.")
+                .data(mapToResponse(updated))
+                .build();
+    }
     // ================= MAPPERS =================
 
     private City mapToEntity(CityRequestDTO dto) {
@@ -125,13 +194,56 @@ public class CityController {
         dto.setIsActive(city.getIsActive());
         dto.setCreatedAt(city.getCreatedAt());
 
-        dto.setStateId(city.getStateId());
-        dto.setAdminId(city.getAdminId());
-
         if (city.getState() != null) {
+            dto.setStateId(city.getState().getId());
             dto.setStateName(city.getState().getName());
+        }
+
+        if (city.getAdmin() != null) {
+            dto.setAdminId(city.getAdmin().getId());
         }
 
         return dto;
     }
+    // ================= GET DELETED =================
+    @GetMapping("/deleted")
+    public ApiResponse<List<CityResponseDTO>> getDeleted() {
+
+        List<CityResponseDTO> deleted = cityService.getDeleted()
+                .stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return ApiResponse.<List<CityResponseDTO>>builder()
+                .success(true)
+                .message("Deleted cities retrieved successfully.")
+                .data(deleted)
+                .build();
+    }
+    // ================= RESTORE =================
+    @PutMapping("/restore/{id}")
+    public ApiResponse<CityResponseDTO> restore(
+            @PathVariable Long id) {
+
+        City restored = cityService.restore(id);
+
+        return ApiResponse.<CityResponseDTO>builder()
+                .success(true)
+                .message("City restored successfully.")
+                .data(mapToResponse(restored))
+                .build();
+    }
+    // ================= HARD DELETE =================
+    @DeleteMapping("/hard-delete/{id}")
+    public ApiResponse<String> hardDelete(
+            @PathVariable Long id) {
+
+        cityService.hardDelete(id);
+
+        return ApiResponse.<String>builder()
+                .success(true)
+                .message("City permanently deleted successfully.")
+                .build();
+    }
+
 }
